--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="dti-registration-number" content="CS-XXXXXXXXX" />
+    <meta name="dti-irm" content="CS-XXXXXXXXX" />
+    <meta name="business-name" content="New Culture Trends" />
+    <meta name="business-type" content="Sole Proprietorship" />
     <title>New Culture Trends</title>
     <script>
       (function () {
