Update DTI registration details: No. 7297002, Name: NCTR Apparel Shop, BIR TIN: 409-146-642-000

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
-    <meta name="dti-registration-number" content="CS-XXXXXXXXX" />
-    <meta name="dti-irm" content="CS-XXXXXXXXX" />
-    <meta name="business-name" content="New Culture Trends" />
+    <meta name="dti-registration-number" content="7297002" />
+    <meta name="dti-irm" content="7297002" />
+    <meta name="business-name" content="NCTR Apparel Shop" />
     <meta name="business-type" content="Sole Proprietorship" />
+    <meta name="bir-tin" content="409-146-642-000" />
     <title>New Culture Trends</title>
     <script>
       (function () {
