Add trademark registration: No. 4/2025/00525886 for New Culture Trends

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="business-name" content="NCTR Apparel Shop" />
     <meta name="business-type" content="Sole Proprietorship" />
     <meta name="bir-tin" content="409-146-642-000" />
+    <meta name="trademark-registration-number" content="4/2025/00525886" />
+    <meta name="trademark-name" content="New Culture Trends" />
     <title>New Culture Trends</title>
     <script>
       (function () {
