Add automatic DTI IRM detection with JSON-LD structured data and meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="bir-tin" content="409-146-642-000" />
     <meta name="trademark-registration-number" content="4/2025/00525886" />
     <meta name="trademark-name" content="New Culture Trends" />
+    <meta name="dti-irm" content="yes" />
+    <meta name="dti-irm-url" content="https://newculturetrends.com/irm" />
     <title>New Culture Trends</title>
     <script>
       (function () {
