Update email to info@newculturetrends.com and add platform detection (WebSite + OnlineStore schemas) for DTI

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="trademark-name" content="New Culture Trends" />
     <meta name="dti-irm" content="yes" />
     <meta name="dti-irm-url" content="https://newculturetrends.com/irm" />
+    <meta name="dti-platform-type" content="e-commerce" />
+    <meta name="dti-platform-url" content="https://newculturetrends.com" />
     <title>New Culture Trends</title>
     <script>
       (function () {
