Add IRM detection to homepage for DTI Trustmark auto-detection - Add IRM URL to DTIRegistration structured data - Add visible IRM link in footer - Update meta tags to include IRM acknowledgment/resolution times

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="trademark-registration-number" content="4/2025/00525886" />
     <meta name="trademark-name" content="New Culture Trends" />
     <meta name="dti-irm" content="yes" />
-    <meta name="dti-irm-url" content="https://newculturetrends.com/irm" />
+    <meta name="dti-irm-url" content="https://www.newculturetrends.com/irm" />
     <meta name="dti-platform-type" content="e-commerce" />
     <meta name="dti-platform-url" content="https://newculturetrends.com" />
     <title>New Culture Trends</title>
@@ -51,7 +51,7 @@
         {
           "@type": "PropertyValue",
           "name": "IRM URL",
-          "value": "https://newculturetrends.com/irm"
+          "value": "https://www.newculturetrends.com/irm"
         },
         {
           "@type": "PropertyValue",
